apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
spec:
  rules:
    - host: linux-web.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apache-service
                port:
                  number: 80
